# Search-engine

./: .gitignore
Indexer/: .env  .gitignore  Cargo.toml
Indexer/Indexer/: Cargo.toml
Indexer/Indexer/src/: db.rs  errors.rs  main.rs  models.rs  utils.rs
Indexer/TF-IDF/: Cargo.toml
Indexer/TF-IDF/src/: db.rs  main.rs  models.rs
Indexer/src/: db.rs  main.rs  models.rs  utils.rs
